# hs-gsl-random

./: .gitignore  .travis.yml  NEWS  README  README.md  Setup.lhs  configure.ac  gsl-random.buildinfo.in  gsl-random.cabal  stack.yaml
GSL/Random/: Dist.hs  Gen.hs
cbits/: qrng_extras.c
lib/GSL/Random/: Dist.hs  Gen.hs  Quasi.hs
lib/GSL/Random/Quasi/: Internal.hs
m4/: ax_cblas.m4  ax_gsl.m4
